--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/normalize.css/normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300;1,400&display=swap');
+body {
+    background: rgb(25,50,67);
+    
+    background: linear-gradient(90deg, rgb(241, 241, 241) 50%, rgb(214, 214, 214) 83%);
+}
+
+h1 {
+    color: rgb(rgb(188, 239, 252));
+}
+
+h2 {
+    color: #3BB4F2;
+}
+
+li {
+    color: #3BB4F2;
+
+    
+}
+
+.container {
+    border-radius: 18px;
+    box-shadow: 8px 11px 7px -3px rgba(0,0,0,0.66);
+    margin: 2rem;
+    background: linear-gradient(80deg, #BBF039 5%, #C6FD3D 50%, #9ECA30 83%);
+
+}
+
