--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div >
   <app-header></app-header>
   <!-- <app-tasks></app-tasks> -->
+  <app-dashboard></app-dashboard>
   <app-game-news></app-game-news>
   <app-button></app-button>
 </div>
