--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -1,13 +1,15 @@
-button {
+
+.label-btn {
     font-family: 'Lato', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: 700;
-    padding: 0.3rem;
+    height: 4rem;
+    padding: 0.6rem 0.8rem 0.6rem 0.8rem;
     color: #f3ffffcb;
-    border-radius: 5px;
+    border-radius: 0px 12px 12px 0px;
+
     border-style: none;
     
     background-image: linear-gradient(to right top, #16a3ff, #16a3ff, #16a3ff, #16a3ff, #16a3ff); 
-    -webkit-box-shadow: 8px 11px 7px -3px rgba(0,0,0,0.66); 
-    box-shadow: 8px 11px 7px -3px rgba(0,0,0,0.66);
+
 }
