--- a/src/app/components/game-news/game-news.component.html
+++ b/src/app/components/game-news/game-news.component.html
@@ -1,4 +1,2 @@
-<ul>
-
-    <li *ngFor="let item of news.appnews.newsitems">{{ item.title }}</li>
-</ul>
+<div>Under Construction</div>
+<!-- <app-game-news-item *ngFor="let item of news.appnews.newsitems" [newsItem]="item"></app-game-news-item> -->
